--- a/config/test1.gwicksfamily.co.uk.conf
+++ b/config/test1.gwicksfamily.co.uk.conf
@@ -8,6 +8,7 @@ server {
 	server_name test1.gwicksfamily.co.uk;
 
 	location / {
+		ssi on;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
 		try_files $uri $uri/ =404;
