Playground mkdocs-material

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,22 @@
 site_name: Anisble Playbook
-theme: material
+theme:
+  name: material
+  #name: mkdocs
+  #name: readthedocs
+  features:
+    - content.code.annotate
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - tables
+  - attr_list
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
