--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,8 +11,14 @@ theme:
   features:
     - content.code.annotate
     - navigation.instant
-    #- navigation.tracking
-    #- navigation.tabs
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.tabs.sticky
+    #- navigation.sections
+    - navigation.expand
+    - navigation.indexes
+    - navigation.top
+
   icon:
     repo: fontawesome/brands/github
 
@@ -27,19 +33,20 @@ theme:
   #      name: Switch to light mode
 
 markdown_extensions:
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
+  - meta
   - tables
   - attr_list
   - def_list
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
   - pymdownx.critic
   - pymdownx.caret
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - pymdownx.highlight:
+      anchor_linenums: true
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.emoji:
